--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,10 @@
   font-weight: bold;
   border-bottom: 1px solid black;
   justify-content: space-between;
-
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  top: 0px;
 }
 
 .logo {
@@ -54,9 +57,6 @@
   display: flex;
   margin: 0px 10px;
   border: 1px solid black;
-  
-
-
 }
 
 .column {
@@ -89,4 +89,83 @@
   display: flex;
   width: 240px;
   flex-direction: column;
+}
+
+.mother,
+.earth,
+.research,
+.cats {
+  display: flex;
+}
+
+.mother {
+  height: 300px;
+  align-items: flex-start;
+}
+
+.earth,
+.research,
+.cats {
+    height: 300px;
+    justify-content: center;
+}
+
+.mother p {
+  display: flex;
+  font-family: Georgia;
+  font-weight: bold;
+  color: white;
+  font-size: 40px;
+  border: 1px solid white;
+  margin: 0px;
+}
+
+.earth p,
+.research p,
+.cats p {
+  display: inline-flex;
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  border: 1px solid white;
+  margin: 0px;
+  text-align: center;
+}
+
+.research p {
+  text-align: center;
+  width: 500px;
+  height: 80px;
+}
+
+.cats p {
+  width: 260px;
+  height: 80px;
+}
+
+.valley,
+.orca,
+.burger,
+.fbi,
+.brooklyn,
+.bites {
+  font-family: Georgia;
+  font-size: 17px;
+}
+
+.main-background {
+  background-image: url("./images/img-story-main.png");
+}
+
+.earth-background {
+  background-image: url("./images/img-story-2.png");
+}
+
+.camera-background {
+  background-image: url("./images/img-story-3.png");
+}
+
+.cats-background {
+  background-image: url("./images/img-story-1.png");
 }
